# miniginx

./: CMakeLists.txt  readme.md
app/: main.cpp
include/miniginx/net/: Connection.hpp  ServerSocket.hpp  Socket.hpp
src/net/: Connection.cpp  ServerSocket.cpp
